--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "highlight.js": "*",
     "marked": "*",
     "marked-toc": "*",
-    "nokit": "0.2.4"
+    "nokit": "0.2.4",
+    "uslug": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
